[FIX] setup: Add missing "requirements.txt" file to package
Fix https://github.com/OCA/pylint-odoo/issues/440

--- a/tox.ini
+++ b/tox.ini
@@ -44,12 +44,21 @@ commands =
 
 [testenv:build]
 skip_install = true
+deps =
+    build
+    bump2version
+    twine
+    wheel
 commands =
     python -m build --sdist --wheel --outdir dist_wo_pbr/
     python -c "import shutil;shutil.rmtree('dist/', ignore_errors=True)"
     python -m build --no-isolation --sdist --wheel --outdir dist/  # Generate ChangeLog with pbr
     python -m twine check --strict dist/*
     bump2version patch --allow-dirty --no-commit --no-tag --dry-run --verbose
+    # Install packages from binaries to test if all files were already included in the compressed file
+    python -c '''import sys,pip,os,glob;os.chdir("dist");sys.argv = ["", "install", "-U", "--force-reinstall", glob.glob("*.tar.gz")[-1], "--use-feature=no-binary-enable-wheel-cache"];pip.main()'''
+    # Testing the package is importing the dependencies well
+    python -c '''from pylint.lint import Run;import os;os.chdir("dist");res = Run(["--load-plugins=pylint_odoo", "-c", "non-exists.cfg", "--disable=all", "--enable=odoolint", "--list-msgs-enabled"])'''
 
 [testenv:codecov]
 deps =
