--- a/tox.ini
+++ b/tox.ini
@@ -75,7 +75,7 @@ setenv =
 commands =
     # Workaround https://github.com/tox-dev/tox/issues/1571
     python -c 'from glob import glob; import subprocess; [subprocess.check_call(["coverage", "combine", "--keep", i]) for i in glob(".coverage.*")]'
-    coverage report
+    coverage report --fail-under=0  # The next command will fail instead but will allow to see the html report
     coverage html
 
 [testenv:clean]
