[REF] tests: Autogenerate readme with examples from test_repo

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -16,6 +16,10 @@ replace = /v{new_version}.svg
 search = /v{current_version}...main
 replace = /v{new_version}...main
 
+[bumpversion:file (github link):README.md]
+search = /blob/v{current_version}/
+replace = /blob/v{new_version}/
+
 [bumpversion:file:README.md]
 search = rev: v{current_version}
 replace = rev: v{new_version}
