--- a/setup.cfg
+++ b/setup.cfg
@@ -29,11 +29,11 @@ classifier =
 
 [options]
 package_dir=
-    =src
+    =pylint_odoo
 packages=find:
 
 [options.packages.find]
-where=src
+where=pylint_odoo
 
 [options.data_files]
 requirements =
