--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,5 @@
 name: build
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main branch
   push:
     branches:
       - main
@@ -12,110 +10,21 @@ on:
       - main
 jobs:
   test:
-    name: ${{ matrix.name }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
+        python: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        tox_env: [py]
         include:
-          # ubuntu
-          - name: 'py37-cover (ubuntu)'
-            python: '3.7'
-            toxpython: 'python3.7'
-            python_arch: 'x64'
-            tox_env: 'py37,report,codecov'
-            os: 'ubuntu-latest'
-          - name: 'py38-cover (ubuntu)'
-            python: '3.8'
-            toxpython: 'python3.8'
-            python_arch: 'x64'
-            tox_env: 'py38,report,codecov'
-            os: 'ubuntu-latest'
-          - name: 'py39-cover (ubuntu)'
-            python: '3.9'
-            toxpython: 'python3.9'
-            python_arch: 'x64'
-            tox_env: 'py39,report,codecov'
-            os: 'ubuntu-latest'
-          - name: 'py310-cover (ubuntu) + lint + build'
-            python: '3.10'
-            toxpython: 'python3.10'
-            python_arch: 'x64'
-            tox_env: 'py310,update-readme,report,codecov,lint,build'
-            os: 'ubuntu-latest'
-          - name: 'py311-dev-cover (ubuntu)'
-            python: '3.11-dev'
-            toxpython: 'python3.11'
-            python_arch: 'x64'
-            tox_env: 'py311,report,codecov'
-            os: 'ubuntu-latest'
-
-          # windows
-          # TODO: Fix py37+win issue
-          # - name: 'py37-cover (windows)'
-          #   python: '3.7'
-          #   toxpython: 'python3.7'
-          #   python_arch: 'x64'
-          #   tox_env: 'py37,report,codecov'
-          #   os: 'windows-latest'
-          - name: 'py38-cover (windows)'
-            python: '3.8'
-            toxpython: 'python3.8'
-            python_arch: 'x64'
-            tox_env: 'py38,report,codecov'
-            os: 'windows-latest'
-          - name: 'py39-cover (windows)'
-            python: '3.9'
-            toxpython: 'python3.9'
-            python_arch: 'x64'
-            tox_env: 'py39,report,codecov'
-            os: 'windows-latest'
-          - name: 'py310-cover (windows)'
-            python: '3.10'
-            toxpython: 'python3.10'
-            python_arch: 'x64'
-            tox_env: 'py310,report,codecov'
-            os: 'windows-latest'
-          - name: 'py311-dev-cover (windows)'
-            python: '3.11-dev'
-            toxpython: 'python3.11'
-            python_arch: 'x64'
-            tox_env: 'py311,report,codecov'
-            os: 'windows-latest'
-
-          # macos
-          - name: 'py37-cover (macos)'
-            python: '3.7'
-            toxpython: 'python3.7'
-            python_arch: 'x64'
-            tox_env: 'py37,report,codecov'
-            os: 'macos-latest'
-          - name: 'py38-cover (macos)'
-            python: '3.8'
-            toxpython: 'python3.8'
-            python_arch: 'x64'
-            tox_env: 'py38,report,codecov'
-            os: 'macos-latest'
-          - name: 'py39-cover (macos)'
-            python: '3.9'
-            toxpython: 'python3.9'
-            python_arch: 'x64'
-            tox_env: 'py39,report,codecov'
-            os: 'macos-latest'
-          - name: 'py310-cover (macos)'
-            python: '3.10'
-            toxpython: 'python3.10'
-            python_arch: 'x64'
-            tox_env: 'py310,report,codecov'
-            os: 'macos-latest'
-          - name: 'py311-dev-cover (macos)'
-            python: '3.11-dev'
-            toxpython: 'python3.11'
-            python_arch: 'x64'
-            tox_env: 'py311,report,codecov'
-            os: 'macos-latest'
-
+          - python: '3.10'
+            os: ubuntu-latest
+            tox_env: py,lint,update-readme,build
+        exclude:
+          - python: '3.7'
+            os: windows-latest
     steps:
     - name: Set git to not change EoL
       if: runner.os == 'Windows'
@@ -126,27 +35,22 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cache/pre-commit
-        key: ${{ runner.os }}-py${{ matrix.python }}-${{ matrix.python_arch }}-pre-commit
+        key: ${{ runner.os }}-py${{ matrix.python }}-pre-commit
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
     - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python }}
-        architecture: ${{ matrix.python_arch }}
+        architecture: 'x64'
         cache: 'pip'
     - name: install dependencies
       run: |
         python -mpip install --progress-bar=off -r test-requirements.txt
-        # virtualenv --version
         pip --version
-        # tox --version
         pip list --format=freeze
     - name: Test
-      env:
-        TOXPYTHON: '${{ matrix.toxpython }}'
-      run: |
-        tox -e ${{ matrix.tox_env }} -v
+      run: tox -e ${{ matrix.tox_env }} -v
     # TODO: Publish package only for signed tags
     - name: Publish package
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && contains(matrix.tox_env, 'build')
