--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,6 @@ envlist =
     py311,
 
 [testenv]
-basepython =
-    {clean,build,report,codecov,lint}: {env:TOXPYTHON:python3}
 parallel_show_output=true
 setenv =
     PYTHONPATH={toxinidir}/tests
@@ -24,7 +22,7 @@ passenv =
 deps = -r{toxinidir}/test-requirements.txt
 usedevelop = true
 commands =
-    pytest -s --cov --cov-report=term-missing -vv {posargs:}
+    pytest -s --cov --cov-report=term-missing --cov-report=html -vv {posargs:}
 
 [testenv:update-readme]
 basepython = {env:TOXPYTHON:python3.10}
@@ -60,40 +58,7 @@ commands =
     # Testing the package is importing the dependencies well
     python -c '''from pylint.lint import Run;import os;os.chdir("dist");res = Run(["--load-plugins=pylint_odoo", "-c", "non-exists.cfg", "--disable=all", "--enable=odoolint", "--list-msgs-enabled"])'''
 
-[testenv:codecov]
-deps =
-    codecov
-skip_install = true
-commands =
-    codecov []
-
-[testenv:report]
-deps = coverage
-skip_install = true
-setenv =
-    COVERAGE_FILE = {toxinidir}/.coverage
-commands =
-    # Workaround https://github.com/tox-dev/tox/issues/1571
-    python -c 'from glob import glob; import subprocess; [subprocess.check_call(["coverage", "combine", "--keep", i]) for i in glob(".coverage.*")]'
-    coverage report --fail-under=0  # The next command will fail instead but will allow to see the html report
-    coverage html
-
 [testenv:clean]
 commands = coverage erase
 skip_install = true
 deps = coverage
-
-[testenv:py37]
-basepython = {env:TOXPYTHON:python3.7}
-
-[testenv:py38]
-basepython = {env:TOXPYTHON:python3.8}
-
-[testenv:py39]
-basepython = {env:TOXPYTHON:python3.9}
-
-[testenv:py310]
-basepython = {env:TOXPYTHON:python3.10}
-
-[testenv:py311]
-basepython = {env:TOXPYTHON:python3.11}
