[REF] tox: Build ChangeLog again
ChangeLog requires 'pbr'

But since this build was migrated to tox the dependencies were not installed correctly

--- a/tox.ini
+++ b/tox.ini
@@ -43,10 +43,7 @@ commands =
 [testenv:build]
 skip_install = true
 deps =
-    build
-    bump2version
-    twine
-    wheel
+    {[testenv]deps}
 commands =
     python -m build --sdist --wheel --outdir dist_wo_pbr/
     python -c "import shutil;shutil.rmtree('dist/', ignore_errors=True)"
