[REF]: update to pylint 3.0.0, drop support for py3.7
Pylint 3.0.0 has been released and with it a bunch of fixes and
improvements. This repository has been updated to depend on this new
version.

BREAKING CHANGE: Pylint 3.0.0 drops support for Python 3.7 so this
plugin no longer supports Python 3.7 as well.

Related #473.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python: ['3.8', '3.9', '3.10', '3.11']
         os: [ubuntu-latest, windows-latest, macos-latest]
         tox_env: [py]
         include:
@@ -28,9 +28,6 @@ jobs:
           - python: '3.10'
             os: ubuntu-latest
             tox_env: 'build'
-        exclude:
-          - python: '3.7'
-            os: windows-latest
     steps:
     - name: Set git to not change EoL
       if: runner.os == 'Windows'
