--- a/.github/workflows/pylint-odoo.yml
+++ b/.github/workflows/pylint-odoo.yml
@@ -1,7 +1,8 @@
 name: Pylint Odoo
 on: [push]
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - run: python setup.py install
-    - run: pylint --load-plugins=pylint_odoo -e odoolint --disable=manifest-deprecated-key,missing-readme --valid-odoo-versions=17
+  Pylint-Odoo-Actions:
+    runs-on: ubuntu-latest
+    steps:
+      - run: python setup.py install
+      - run: pylint --load-plugins=pylint_odoo -e odoolint --disable=manifest-deprecated-key,missing-readme --valid-odoo-versions=17
