--- a/.github/workflows/pylint-odoo.yml
+++ b/.github/workflows/pylint-odoo.yml
@@ -7,5 +7,11 @@ jobs:
       run:
         working-directory: ./
     steps:
-      - run: python setup.py install
-      - run: pylint --load-plugins=pylint_odoo -e odoolint --disable=manifest-deprecated-key,missing-readme --valid-odoo-versions=17
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          cache: 'pip'
+      - run: |
+          ls
+          python setup.py install
+          pylint --load-plugins=pylint_odoo -e odoolint --disable=manifest-deprecated-key,missing-readme --valid-odoo-versions=17
