--- a/.github/workflows/pylint-odoo.yml
+++ b/.github/workflows/pylint-odoo.yml
@@ -7,10 +7,12 @@ jobs:
       run:
         working-directory: ./
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-          cache: 'pip'
       - run: |
           ls
           python setup.py install
