--- a/.github/workflows/pylint-odoo.yml
+++ b/.github/workflows/pylint-odoo.yml
@@ -13,7 +13,5 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: |
-          ls
-          python setup.py install
-          pylint --load-plugins=pylint_odoo -e odoolint --disable=manifest-deprecated-key,missing-readme --valid-odoo-versions=17
+      - run: python setup.py install
+      - run: pylint --load-plugins=pylint_odoo -e odoolint --disable=manifest-deprecated-key,missing-readme --valid-odoo-versions=17
