--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,11 @@ on:
   pull_request:
     branches:
       - main
+
+env:
+  CACHE_VERSION: 1
+  PRE_COMMIT_CACHE: ~/.cache/pre-commit
+
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -35,9 +40,9 @@ jobs:
         git config --global core.autocrlf false
     - name: Cache pre-commit packages
       id: cache-pre-commit
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
-        path: ~/.cache/pre-commit
+        path: ${{ env.PRE_COMMIT_CACHE }}
         key: ${{ runner.os }}-py${{ matrix.python }}-pre-commit
     - uses: actions/checkout@v4.1.2
       with:
