--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,17 +20,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
         os: [ubuntu-latest, windows-latest, macos-13, macos-latest]
         tox_env: [py]
         include:
-          - python: '3.12'
+          - python: '3.13'
             os: ubuntu-latest
             tox_env: 'lint'
-          - python: '3.12'
+          - python: '3.13'
             os: ubuntu-latest
             tox_env: 'update-readme'
-          - python: '3.12'
+          - python: '3.13'
             os: ubuntu-latest
             tox_env: 'build'
         exclude:
