[REF] *: Adapt code to be compatible with pylint4 (early)
 * Removing py3.9 support as pylint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14-dev']
+        python: ['3.10', '3.11', '3.12', '3.13', '3.14-dev']
         os: [ubuntu-latest, windows-latest, macos-13, macos-latest]
         tox_env: [py]
         include:
@@ -36,8 +36,6 @@ jobs:
         exclude:
           # macos-14 AKA macos-latest has switched to being an ARM runner, only supporting newer versions of Python
           # https://github.com/actions/setup-python/issues/825#issuecomment-2096792396
-          - python: '3.9'
-            os: macos-latest
           - python: '3.10'
             os: macos-latest
 
