[REF] github-actions: Use py3.14 pre-release
Set github actions version first level value in order to use latest minor releases

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ['3.9', '3.10', '3.11', '3.12', '3.13']
+        python: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14-dev']
         os: [ubuntu-latest, windows-latest, macos-13, macos-latest]
         tox_env: [py]
         include:
@@ -52,10 +52,10 @@ jobs:
       with:
         path: ${{ env.PRE_COMMIT_CACHE }}
         key: ${{ runner.os }}-${{ runner.arch }}-py${{ matrix.python }}-pre-commit
-    - uses: actions/checkout@v4.1.2
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - uses: actions/setup-python@v5.0.0
+    - uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python }}
         architecture: 'x64'
