--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,8 @@ passenv =
 deps = -r{toxinidir}/test-requirements.txt
 usedevelop = true
 commands =
-    pytest -s --cov --cov-report=term-missing --cov-report=html -vv {posargs:}
+    py: pytest -s --cov --cov-report=term-missing --cov-report=html -vv {posargs:} -n auto {posargs:}
+    !py: pytest -s --cov --cov-report=term-missing --cov-report=html -vv {posargs:}
 
 [testenv:update-readme]
 basepython = {env:TOXPYTHON:python3.13}
