--- a/tox.ini
+++ b/tox.ini
@@ -23,8 +23,11 @@ passenv =
 deps = -r{toxinidir}/test-requirements.txt
 usedevelop = true
 commands =
-    py: pytest -s --cov --cov-report=term-missing --cov-report=html -vv {posargs:} -n auto {posargs:}
-    !py: pytest -s --cov --cov-report=term-missing --cov-report=html -vv {posargs:}
+    pytest -s --cov --cov-report=term-missing --cov-report=html -vv \
+    # use py-multi to enable parallel execution
+    multi: -n auto \
+    # extra arguments (e.g -k test_basic)
+    {posargs:}
 
 [testenv:update-readme]
 basepython = {env:TOXPYTHON:python3.14}
